scripts/nullness/wpi/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8.txt
../original/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/server/EncodeDecodeTask.java:56: error: (argument) $$ 4 $$ bytes $$ String constructor $$ @Initialized @NonNull byte @Initialized @Nullable [] $$ @Initialized @NonNull byte @Initialized @NonNull [] $$ ( 1664, 1668 ) $$ incompatible argument for parameter bytes of String constructor.
                    out.write("Encoded code: " + new String(code) + "\r\n");
                                                            ^
  found   : @Initialized @NonNull byte @Initialized @Nullable []
  required: @Initialized @NonNull byte @Initialized @NonNull []
../original/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/server/PoolThreadTaskExecutor2.java:20: error: (method.invocation) $$ 3 $$ buildThread() $$ @UnderInitialization(server.PoolThreadTaskExecutor2.class) @NonNull PoolThreadTaskExecutor2 $$ @Initialized @NonNull PoolThreadTaskExecutor2 $$ ( 590, 603 ) $$ call to buildThread() not allowed on the given receiver.
            threads[i] = buildThread();
                                    ^
  found   : @UnderInitialization(server.PoolThreadTaskExecutor2.class) @NonNull PoolThreadTaskExecutor2
  required: @Initialized @NonNull PoolThreadTaskExecutor2
../original/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/Value.java:11: error: (assignment) $$ 2 $$ T extends @Initialized @Nullable Object $$ T extends @Initialized @NonNull Object $$ ( 241, 244 ) $$ incompatible types in assignment.
        this.value = val;
                     ^
  found   : T extends @Initialized @Nullable Object
  required: T extends @Initialized @NonNull Object
../original/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/Value.java:14: error: (initialization.fields.uninitialized) $$ 1 $$ value $$ ( 257, 280 ) $$ the constructor does not initialize fields: value
    public Value() {
           ^
../original/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/visitor/ConsoleVisitor.java:17: error: (dereference.of.nullable) $$ 1 $$ list.get(i) $$ ( 508, 519 ) $$ dereference of possibly-null reference list.get(i)
            stringBuilder.append(list.get(i).toString());
                                         ^
../original/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/visitor/ConsoleVisitor.java:21: error: (dereference.of.nullable) $$ 1 $$ list.get(list.size() - 1) $$ ( 652, 677 ) $$ dereference of possibly-null reference list.get(list.size() - 1)
            stringBuilder.append(list.get(list.size() - 1).toString());
                                         ^
../original/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/visitor/ConsoleVisitor.java:56: error: (dereference.of.nullable) $$ 1 $$ constant.getValue() $$ ( 1597, 1616 ) $$ dereference of possibly-null reference constant.getValue()
        System.out.print(constant.getValue().toString() + " ");
                                          ^
../original/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/visitor/ConsoleVisitor.java:62: error: (dereference.of.nullable) $$ 1 $$ value.getValue() $$ ( 1729, 1745 ) $$ dereference of possibly-null reference value.getValue()
        System.out.print(value.getValue().toString() + " ");
                                       ^
../original/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/SqlQueryBuilder.java:35: error: (argument) $$ 4 $$ a $$ Arrays.asList $$ @Initialized @NonNull Column</*RAW*/> @Initialized @Nullable [] $$ @Initialized @NonNull Column</*RAW*/> @Initialized @NonNull [] $$ ( 1032, 1039 ) $$ incompatible argument for parameter a of Arrays.asList.
        selectColumns = asList(columns);
                               ^
  found   : @Initialized @NonNull Column</*RAW*/> @Initialized @Nullable []
  required: @Initialized @NonNull Column</*RAW*/> @Initialized @NonNull []
../original/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/SqlQueryBuilder.java:41: error: (argument) $$ 4 $$ a $$ Arrays.asList $$ @Initialized @NonNull Table @Initialized @Nullable [] $$ @Initialized @NonNull Table @Initialized @NonNull [] $$ ( 1178, 1184 ) $$ incompatible argument for parameter a of Arrays.asList.
        fromTables = asList(tables);
                            ^
  found   : @Initialized @NonNull Table @Initialized @Nullable []
  required: @Initialized @NonNull Table @Initialized @NonNull []
../original/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/SqlQueryBuilder.java:53: error: (argument) $$ 4 $$ a $$ Arrays.asList $$ @Initialized @NonNull Column</*RAW*/> @Initialized @Nullable [] $$ @Initialized @NonNull Column</*RAW*/> @Initialized @NonNull [] $$ ( 1477, 1484 ) $$ incompatible argument for parameter a of Arrays.asList.
        orderByColumns = asList(columns);
                                ^
  found   : @Initialized @NonNull Column</*RAW*/> @Initialized @Nullable []
  required: @Initialized @NonNull Column</*RAW*/> @Initialized @NonNull []
../original/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/SqlQueryBuilder.java:59: error: (argument) $$ 4 $$ a $$ Arrays.asList $$ @Initialized @NonNull Column</*RAW*/> @Initialized @Nullable [] $$ @Initialized @NonNull Column</*RAW*/> @Initialized @NonNull [] $$ ( 1632, 1639 ) $$ incompatible argument for parameter a of Arrays.asList.
        groupByColumns = asList(columns);
                                ^
  found   : @Initialized @NonNull Column</*RAW*/> @Initialized @Nullable []
  required: @Initialized @NonNull Column</*RAW*/> @Initialized @NonNull []
../original/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/encoder/CipherEncoder.java:49: error: (argument) $$ 4 $$ input $$ Cipher.doFinal $$ @Initialized @NonNull byte @Initialized @Nullable [] $$ @Initialized @NonNull byte @Initialized @NonNull [] $$ ( 1551, 1556 ) $$ incompatible argument for parameter input of Cipher.doFinal.
            return new String(aes.doFinal(bytes));
                                          ^
  found   : @Initialized @NonNull byte @Initialized @Nullable []
  required: @Initialized @NonNull byte @Initialized @NonNull []
../original/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/encoder/CipherEncoderTest.java:23: error: (argument) $$ 4 $$ expected $$ TestCase.assertEquals $$ @Initialized @Nullable String $$ @Initialized @NonNull String $$ ( 542, 548 ) $$ incompatible argument for parameter expected of TestCase.assertEquals.
        assertEquals("Encode - Decode Test Pass", decode, new String(encode));
                                                  ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull String
../original/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/encoder/CipherEncoderTest.java:23: error: (argument) $$ 4 $$ bytes $$ String constructor $$ @Initialized @NonNull byte @Initialized @Nullable [] $$ @Initialized @NonNull byte @Initialized @NonNull [] $$ ( 561, 567 ) $$ incompatible argument for parameter bytes of String constructor.
        assertEquals("Encode - Decode Test Pass", decode, new String(encode));
                                                                     ^
  found   : @Initialized @NonNull byte @Initialized @Nullable []
  required: @Initialized @NonNull byte @Initialized @NonNull []
Note: ../original/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/visitor/JsonVisitor.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
15 errors
